--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyGest</string>
+    <string name="app_name">Superbank</string>
     <string name="inserisci">Inserisci</string>
     <string name="cancella">Cancella</string>
 
