--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="new_record">Inserisci un movimento</string>
     <string name="insert">Inserisci</string>
     <string name="cancel">Cancella</string>
+    <string name="title_activity_dialog">DialogActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
