filter menu bottomsheet con scrim ok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="title_activity_dialog">DialogActivity</string>
     <string name="title_filter_activity">Tutte le transazioni</string>
 
-    <string name="title_activity_crea_conto">CreaContoActivity</string>
+    <string name="title_activity_crea_conto">Gestisci i conti</string>
     <string name="title_dialog_select_colors">Seleziona colore conto</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
