--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="title_dialog_select_colors">Seleziona colore conto</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="main_cto">VEDI CONTI FINO AL</string>
+    <string name="balances_up_to">VEDI CONTI FINO AL</string>
 
 
 </resources>
