--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="balances_up_to">VEDI CONTI FINO AL</string>
 
+    <string name="img_del_description">Cancella</string>
+    <string name="img_edit_description">Modifica</string>
 
 </resources>
